--- a/package.json
+++ b/package.json
@@ -14,10 +14,16 @@
     "eslint-config-next": "13.4.15",
     "mongoose": "^7.4.3",
     "next": "13.4.15",
+    "next-auth": "^4.23.1",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "@auth/mongodb-adapter": "^1.0.0",
+    "mongodb": "^5.8.1",
+    "nodemailer": "^6.9.4"
   }
 }
