--- a/package.json
+++ b/package.json
@@ -12,24 +12,22 @@
     "@headlessui/react": "^1.7.17",
     "autoprefixer": "10.4.15",
     "eslint": "8.47.0",
-    "eslint-config-next": "13.4.15",
+    "eslint-config-next": "^13.5.2",
     "mongoose": "^7.4.3",
-    "next": "^13.4.19",
+    "next": "^13.5.2",
     "next-auth": "^4.23.1",
     "postcss": "8.4.27",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-toastify": "^9.1.3",
     "swr": "^2.2.2",
     "tailwindcss": "3.3.3"
   },
   "devDependencies": {
-    "@auth/mongodb-adapter": "^1.0.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "mongodb": "^5.8.1",
-    "nodemailer": "^6.9.4",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4"
   }
