--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "autoprefixer": "10.4.15",
+    "envalid": "^8.0.0",
     "eslint": "8.47.0",
     "eslint-config-next": "^13.5.2",
     "mongoose": "^7.4.3",
@@ -25,6 +26,7 @@
     "tailwindcss": "3.3.3"
   },
   "devDependencies": {
+    "@types/react": "18.2.32",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "mongodb": "^5.8.1",
